# skillgap-ai

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  deployment-roadmap.md  docker-compose.prod.yml  docker-compose.yml  ecr-policy.json  project_proposal.txt  pytest.ini  roadmap.txt  specs.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  SECRETS.md  pyproject.toml  test_job_apis.py  ubuntu@34.238.103.52
backend/alembic/: env.py
backend/alembic/versions/: ef29ff77ef31_initial_schema.py
backend/app/: main.py
backend/app/adapters/auth/: stub_auth_adapter.py
backend/app/adapters/embedding/: sentence_transformer_adapter.py
backend/app/adapters/job_sources/: adzuna_adapter.py  remoteok_adapter.py
backend/app/adapters/llm/: local_llm_adapter.py
backend/app/adapters/repositories/: job_repository.py  resume_repository.py
backend/app/adapters/vector_db/: pinecone_adapter.py
backend/app/api/: dependencies.py  middleware.py  schemas.py
backend/app/api/routes/: interview.py  jobs.py  resume.py
backend/app/core/: config.py
backend/app/domain/model/: job.py  resume.py
backend/app/domain/ports/: auth_port.py  embedding_port.py  job_source_port.py  llm_port.py  repositories.py  vector_db_port.py
backend/app/domain/services/: interview_graph.py  interview_service.py  job_matching_service.py  job_service.py  resume_service.py  skill_extraction_service.py
backend/app/infrastructure/: logging.py
backend/app/infrastructure/database/: models.py  session.py
backend/tests/: conftest.py  test_health.py
llm-service/: .env.example  (+4 more)
(+23 files in other folders)
